# drfsite

./: .gitignore  README.md  pyproject.toml
drfsite/: db.sqlite3  settings.py  urls.py
drfsite/drfsite/: asgi.py  wsgi.py
drfsite/players/: models.py  serializers.py
drfsite/players/migrations/: 0002_players_user.py
players/: serializers.py  views.py
players/migrations/: 0001_initial.py
